Ajustei posicionamento dos elementos e implementei responsividade aos mesmos

--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -16,7 +16,7 @@
   <title>Termos e Condições | Bikecraft</title>
 </head>
 
-<body id="termos">
+<body id="bicicleta">
   <header class="header-bg">
     <div class="header container">
       <a href="../">
@@ -50,8 +50,14 @@
         <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orcamento.html">Comprar Agora</a>
-          <span class="font-1-xs cor-6"> <img src="../img/icones/entrega.svg" alt=""> Entrega em 5 dias</span>
-          <span class="font-1-xs cor-6"> <img src="../img/icones/estoque.svg" alt=""> 18 em estoque</span>
+          <span class="font-1-xs cor-6">
+            <img src="../img/icones/entrega.svg" alt="">
+            Entrega em 5 dias
+          </span>
+          <span class="font-1-xs cor-6">
+            <img src="../img/icones/estoque.svg" alt="">
+            18 em estoque
+          </span>
         </div>
         <h2 class="font-1-xs cor-0">Informações</h2>
         <ul class="bicicleta-informacoes">
