--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <li>
         <a href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Numbus Stark</h3>
+          <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
