--- a/contato.html
+++ b/contato.html
@@ -90,6 +90,41 @@
     </div>
   </main>
 
+  <article class="lojas container">
+    <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+    <div class="lojas-item">
+      <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 Salvador - BA">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Salvador</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>Salvador - BA</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:ba@bikcraft.com">ba@bikcraft.com</a>
+          <a href="tel:+5571999999999">+55 (71) 99999-9999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+      </div>
+    </div>
+
+    <div class="lojas-item">
+      <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 São Paulo- SP">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">São Paulo</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>São Paulo - SP</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+          <a href="tel:+5571999999999">+55 (11) 99999-9999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+      </div>
+    </div>
+  </article>
+
   <footer class="footer-bg">
     <div class="footer container">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
