--- a/orcamento.html
+++ b/orcamento.html
@@ -56,12 +56,39 @@
 
           <input type="radio" name="produto" value="nimbus" id="nimbus">
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          </div>
 
           <input type="radio" name="produto" value="magic" id="magic">
           <label for="magic">Magic Might <span>R$ 2499</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          </div>
 
           <input type="radio" name="produto" value="nebula" id="nebula">
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
+          <div class="orcamento-detalhes">
+            <ul class="font-1-xs cor-8">
+              <li><img src="./img/icones/eletrica.svg" alt="">Motor Elétrico</li>
+              <li><img src="./img/icones/carbono.svg" alt="">Fibra de Carbono</li>
+              <li><img src="./img/icones/velocidade.svg" alt="">40 km/h</li>
+              <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
+            </ul>
+            <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta branca">
+          </div>
         </div>
 
         <div class="orcamento-conteudo" id="orcamento-seguro">
@@ -93,29 +120,33 @@
           <input type="email" id="email" name="email">
         </div>
         <h2 class="font-1-xs cor-9 col-2">entrega</h2>
-        <div class="col-2">
+        <div>
           <label for="cep">CEP</label>
           <input type="text" id="cep" name="cep">
         </div>
-        <div class="col-2">
+        <div>
           <label for="numero">Número</label>
           <input type="text" id="numero" name="numero">
         </div>
-        <div class="col-2">
+        <div>
           <label for="logradouro">Logradouro</label>
-          <input type="text" id="logradouro" name="logradouro">
+          <input type="text" id="logradouro" name="logradouro" placeholder="Rua, Avenida...">
         </div>
-        <div class="col-2">
+        <div>
           <label for="bairro">Bairro</label>
           <input type="text" id="bairro" name="bairro">
         </div>
-        <div class="col-2">
+        <div>
           <label for="cidade">Cidade</label>
           <input type="text" id="cidade" name="cidade">
         </div>
-        <div class="col-2">
+        <div>
           <label for="estado">Estado</label>
           <input type="text" id="estado" name="estado">
+        </div>
+        <div class="orcamento-termos col-2">
+          <input type="checkbox" id="termos" name="termos">
+          <p class="font-2-xs">Li e aceito os <a href="./"><span>termos e condições</span></a></p>
         </div>
         <button class="botao col-2">Solicitar Orçamento</button>
       </div>
