--- a/orcamento.html
+++ b/orcamento.html
@@ -146,7 +146,7 @@
         </div>
         <div class="orcamento-termos col-2">
           <input type="checkbox" id="termos" name="termos">
-          <p class="font-2-xs">Li e aceito os <a href="./"><span>termos e condições</span></a></p>
+          <p class="font-2-xs">Li e aceito os <a href="./termos.html"><span>termos e condições</span></a></p>
         </div>
         <button class="botao col-2">Solicitar Orçamento</button>
       </div>
