--- a/bicicletas.html
+++ b/bicicletas.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições">
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -42,7 +43,7 @@
     </div>
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+        <img src="./img/bicicletas/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="font-2-m cor-0">R$ 4999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -50,19 +51,19 @@
         <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="./img/icones/eletrica.svg" alt="">
+            <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
             Motor Elétrico
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="">
+            <img src="./img/icones/carbono.svg" width="32" height="32" alt="">
             Fibra de Carbono
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="">
+            <img src="./img/icones/velocidade.svg" width="32" height="32" alt="">
             50 km/h
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="">
+            <img src="./img/icones/rastreador.svg" width="32" height="32" alt="">
             Rastreador
           </li>
         </ul>
@@ -72,7 +73,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 2499</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -80,19 +81,19 @@
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="">
+              <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="">
+              <img src="./img/icones/carbono.svg" width="32" height="32" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="">
+              <img src="./img/icones/velocidade.svg" width="32" height="32" alt="">
               45 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="">
+              <img src="./img/icones/rastreador.svg" width="32" height="32" alt="">
               Rastreador
             </li>
           </ul>
@@ -102,7 +103,7 @@
     </div>
     <div class="bicicletas container">
       <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta preta">
+        <img src="./img/bicicletas/nebula.jpg" width="1120" height="680" alt="Bicicleta preta">
         <span class="font-2-m cor-0">R$ 3999</span>
       </div>
       <div class="bicicletas-conteudo">
@@ -110,19 +111,19 @@
         <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="font-1-m cor-8">
           <li>
-            <img src="./img/icones/eletrica.svg" alt="">
+            <img src="./img/icones/eletrica.svg" width="32" height="32" alt="">
             Motor Elétrico
           </li>
           <li>
-            <img src="./img/icones/carbono.svg" alt="">
+            <img src="./img/icones/carbono.svg" width="32" height="32" alt="">
             Fibra de Carbono
           </li>
           <li>
-            <img src="./img/icones/velocidade.svg" alt="">
+            <img src="./img/icones/velocidade.svg" width="32" height="32" alt="">
             50 km/h
           </li>
           <li>
-            <img src="./img/icones/rastreador.svg" alt="">
+            <img src="./img/icones/rastreador.svg" width="32" height="32" alt="">
             Rastreador
           </li>
         </ul>
@@ -132,7 +133,7 @@
   </main>
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -143,13 +144,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
