--- a/seguros.html
+++ b/seguros.html
@@ -37,12 +37,13 @@
   <main class="seguros-bg">
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Escolha o seguro</p>
-        <h1 class="font-1-xxl cor-0">Você seguro<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-5" data-anime="600">Escolha o seguro</p>
+        <h1 class="font-1-xxl cor-0" data-anime="600">Você seguro<span class="cor-p1">.</span></h1>
       </div>
     </div>
     <div class="seguros container">
-      <div class="seguros-item">
+
+      <div class="seguros-item fadeInLeft" data-anime="200">
         <h3 class="font-1-xl cor-6">PRATA</h3>
         <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -54,7 +55,7 @@
         <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
 
-      <div class="seguros-item">
+      <div class="seguros-item fadeInRight" data-anime="400">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -176,6 +177,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft &copy; Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="./js/plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
