Implementado uma classe para fazer o site funcionar, mesmo com o JavaScript desativado

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+  <title>Bikecraft - Bicicletas Elétricas</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-  <title>Bikecraft - Bicicletas Elétricas</title>
+  <script>document.documentElement.classList.add("js")</script>
 </head>
 
 <body>
