--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições">
 
+  <link rel="icon" type="image/svg+xml" href="./favicon.svg">
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
