--- a/contato.html
+++ b/contato.html
@@ -81,7 +81,7 @@
           </div>
           <div class="col-2">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="contato@email.com">
+            <input type="email" id="email" name="email" placeholder="contato@email.com" required>
           </div>
           <div class="col-2">
             <label for="mensagem">Mensagem</label>
@@ -166,6 +166,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
+  <script src="./js/formulario.js"></script>
 </body>
 
 </html>
